# amongus-shooter

./: .gitignore  AssetHandler.c  CMakeLists.txt  README.md  jimmy.h  main.c  test.c
utils/: Bullet.h  CollisionsHandler.c  CollisionsHandler.h  Enemy.c  Enemy.h  GameHandler.c  GameHandler.h  LinkedList.c  LinkedList.h  MapHandler.c  MapHandler.h  Player.c  Player.h  SpawnLocation.h  Sprite.c  Sprite.h  aMapObject.c  aMapObject.h
